...
            </objects>
            <point key="canvasLocation" x="-46" y="-1398"/>
        </scene>
        <!--Job-->
        <scene sceneID="yUG-lL-AsK">
            <objects>
                <viewController title="Job" id="JEX-9P-axG" customClass="JobViewController" customModule="Wemotely" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="svH-Pt-448">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Loading" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="0XM-y9-sOw">
                                <rect key="frame" x="20" y="323" width="335" height="21"/>
...
            </objects>
            <point key="canvasLocation" x="334" y="-613"/>
        </scene>
        <!--Settings-->
        <scene sceneID="J3L-9P-lIR">
            <objects>
                <tableViewController title="Settings" id="eRk-o7-102" customClass="SettingsTableViewController" customModule="Wemotely" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="Cig-Zl-HRa">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                        <sections>
                            <tableViewSection headerTitle="General" id="DQB-E7-bHk">
...
            </objects>
            <point key="canvasLocation" x="2066" y="-613"/>
        </scene>
        <!--Dashboard-->
        <scene sceneID="smW-Zh-WAh">
            <objects>
                <tableViewController storyboardIdentifier="DashboardTableView" title="Dashboard" clearsSelectionOnViewWillAppear="NO" id="7bK-jq-Zjz" customClass="DashboardTableViewController" customModule="Wemotely" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="r7i-6Z-zg0">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                        <prototypes>
                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="dashboardCell" textLabel="Arm-wq-HPj" detailTextLabel="ig7-T5-4MZ" style="IBUITableViewCellStyleValue1" id="WCw-Qf-5nD" customClass="DashboardTableViewCell" customModule="Wemotely" 
...
            </objects>
            <point key="canvasLocation" x="708" y="-1398"/>
        </scene>
        <!--Jobs-->
        <scene sceneID="bCi-xY-VeE">
            <objects>
                <tableViewController storyboardIdentifier="JobsTableView" title="Jobs" id="rLB-DV-Bnn" customClass="JobsTableViewController" customModule="Wemotely" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="f1f-ND-63J">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="jobsCellWithAccount" rowHeight="100" id="2Z1-H0-h1b" customClass="JobsTableViewCell" customModule="Wemotely" customModuleProvider="target">
...
