import Foundation

enum Filter: String {
    case unorganised = "All Inboxes"
    case inbox = "Inbox"
    case favourites = "Favourites"
    case unread = "Unread"
    case trash = "Trash"
}
