...
        return Account.refreshable(provider: realmProvider, uuid: row?.accountUUID)
    }

    override func viewDidLoad() {
        super.viewDidLoad()

        tableView.accessibilityIdentifier = "jobsTableView"

        didEdit = false

        setupRefreshControl()
        setupToolbar()
    }
...
